# Chinese-Classics-Skills

./: README.md
daode-jing/: README.md  SKILL.md
daode-jing/data/: buddhist_comparison.txt  jing.txt  modern_scenarios.txt
daode-jing/scripts/: main.py  personal_recommendation.py
huangdi-neijing/: README.md  SKILL.md
huangdi-neijing/references/: 二十四节气养生.md  体质辨识.md  养生之道.md  养生食疗方.md  常用穴位详解.md  灵枢篇目.md  病因病机.md  症状库.md  素问篇目.md  脏腑经络.md  阴阳五行.md  黄帝内经概览.md
huangdi-neijing/scripts/: calculate-solar-term.py  constitution-quiz.py  get-lunar-date.py  get-solar-term.py
zhouyi-learning/: CHANGELOG.md  README.md  SKILL.md  VERSION  pyproject.toml  requirements.txt
zhouyi-learning/references/: 修心指南_v3.md  八卦.md  六十四卦.md  六十四卦终极版_v10.md  卦象关系.md  案例库.md  起卦指南.md
zhouyi-learning/scripts/: add_remaining_gua.py  complete_v10.py  complete_v11.py  daily-gua.py  exercise-system.py  final_v11.py  finalize_v11.py  fix_v11_format.py  generate-gua.mjs  generate_missing_gua.py  generate_v11_final.py  get-lunar-ganzhi.py  get-solar-term.py  interactive-gua.py  main.py  zhouyi_database.py
zhouyi-learning/tests/: run_tests.py  test_core_functions.py  test_lunar_calendar.py
zizhi-tongjian/: CHANGELOG.md  EXPANSION_PLAN.md  EXTENSIONS.md  INTEGRATION-GUIDE.md  PHASE4_SUMMARY.md  RAG-SYSTEM.md  README-PHASE1.md  README-PHASE2.md  README.md  SKILL.md  USAGE_GUIDE.md  rag_api_server.py  requirements.txt  web_app.py  web_chat.py  web_interface.html  web_interface_rag.html  web_interface_real.html
zizhi-tongjian/api/: auth.py  chat.py  main.py
zizhi-tongjian/data/: cases.json  (+6 more)
(+40 files in other folders)
